--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@ header{
     width: 100%;
 }
 
+h1{
+    font-size: 30px;
+    font-weight: bold;
+    margin: 1em 0;
+}
+
 #cuadroPokedex{
     width: 80%;
     margin: 0 auto;
